2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c (apply_settings): Initialize the other
	fields of this data structure

	* Makefile.am (bonobo_sources): Remove bonobo-property-editor-range.[ch]

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the OAF_FILE_IN_RULE and copy it here
	(bonobo_sources): add bonobo-properties-editor-range.[ch]

	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* main.c (main): Pass in legacy files to capplet_init.

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS
	Remove extraneous EXTRA_DIST
	(EXTRA_DIST): Make sure to include defaults and OAF files

	* keyboard.desktop.in.in (Exec): Update for bonoboization

	* Bonobo_Control_Capplet_keyboard_properties.oaf: Update to
	correct binary name

	* main.c (create_dialog): Use GNOMECC_GLADE_DIR rather than
	GLADE_DATADIR

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* main.c (create_dialog): Revert to old prototype.
	(setup_dialog): Moved signal_connect on demo button to here.

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* Rewritten to use bonobo-conf.

2001-07-18  Jakub Steiner <jimmac@ximian.com>

	* keyboard-capplet.png: use the 3d version.

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am: nice and clean just as we like it

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added missing icons_DATA

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am ($(desktop).in): desktop.in.in -> desktop.in ->desktop
	so that we can merge the incondir path.
	* add keyboard-capplet.png (by jimmac) an use it

2001-07-10  Kai Lahmann <kl@linuxfaqs.de>

	* keyboard-properties.desktop: Fixed wrong binary name

2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (set_scale): Add appropriate casts
