@@ -2,6 +2,8 @@
 
 	* keyboard-properties.c (apply_settings): Initialize the other
 	fields of this data structure
+	(apply_settings): Use lookup table to get the values to put in
+	kbdsettings
 
 	* Makefile.am (bonobo_sources): Remove bonobo-property-editor-range.[ch]
 
